1998-11-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: All parts of GNOME will now require
	LibGTop >= 0.29.0 which is the latest version from CVS.

1998-11-20  James Henstridge  <james@daa.com.au>

	* gnome.m4(GNOME_INIT_HOOK): Changed the call to GNOME_GNORBA_CHECK
	to GNOME_GNORBA_HOOK([],$2).  Before if you specified that the
	macro should not exit on errors, and you didn't have ORBit, the
	script would fail anyway.

1998-11-17  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: We need to check for <net/if_var.h>
	and conditionally include it before <net/if_isppp.h> in the code
	that check for I4B to make it work on FreeBSD 3.0.
	
1998-10-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* gnome-guile-checks.m4: Add GUILE_LIBS to LIBS when checking
	whether guile works.  Adding them to LDFLAGS does not work on all
	systems.  (Thanks to Rusty Chris Holleman)

1998-11-12  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-orbit-check.m4: Remove AC_DEFINE(HAVE_ORBIT). Add
	AM_CONDITIONAL for HAVE_ORBIT.  gnome-gnorba-check.m4: Same with
	HAVE_GNORBA.  Change GNOME_ORBIT_HOOK and GNOME_GNORBA_HOOK to use
	AC_CACHE_CHECK, setting both gnome_cv_orbit_found and
	gnome_cv_gnorba_found.

	* gnome.m4: (GNOME_INIT_HOOK): Add GNOME_GNORBA_CHECK if
	gnome-config is found.  New GNOMEGNORBA_LIBS library variable
	(GNOMEGNORBA_LIBS is a superset of GNOMEUI_LIBS).  Update
	GNOME_LIBDIR and GNOME_INCLUDEDIR to to include the required
	Gnorba info, if it is in a different location.

	* Makefile.am (MACROS): Add gnome-gnorba-check.m4 to Makefile.
	
	* gnome-gnorba-check.m4: New file.

1998-11-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (vsnprintf): Remove easy-vsnprintf hack -- it
	doesn't work for Solaris 2.5 binaries running on Solaris 2.6.
	From Frederic Devernay <devernay@istar.fr>.

1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Fix stupid type (sterror_r -> strerror_r).
